tests/paczka1/small_fuzzy/36172174.err
Error in line 1: Gx2cJ4cgU2 A803 67,5
Error in line 8: Gx2cJ4cgU2 A443 2,5
Error in line 9: Gx2cJ4cgU2 A418 52,4
